// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GuestNetwork/> Snapshot disabled. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Enable
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="1"
          type="checkbox"
        />
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled DHCP. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Enable
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="1"
          type="checkbox"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="3"
      >
        Router IP address
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="3"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the guest inner network.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="4"
      >
        Network mask
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="4"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Enable DHCP
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="5"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="11"
      >
        DHCP start
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="11"
            min="1"
            required=""
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="12"
      >
        DHCP max leases
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="12"
            min="1"
            required=""
            type="number"
            value="150"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="13"
      >
        Lease time (hours)
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="13"
            min="120"
            required=""
            type="number"
            value="3600"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Enable QoS
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="6"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled QoS. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Enable
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="1"
          type="checkbox"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="3"
      >
        Router IP address
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="3"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the guest inner network.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="4"
      >
        Network mask
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="4"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Enable DHCP
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="5"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Enable QoS
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="6"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="12"
      >
        Download
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="12"
            min="1"
            required=""
            type="number"
            value="1023"
          />
          <div
            class="input-group-append"
          >
            <p
              class="input-group-text"
            >
              kb/s
            </p>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          Download speed in guest network (in kilobits per second).
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="13"
      >
        Upload
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="13"
            min="1"
            required=""
            type="number"
            value="1025"
          />
          <div
            class="input-group-append"
          >
            <p
              class="input-group-text"
            >
              kb/s
            </p>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          Upload speed in guest network (in kilobits per second).
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Enable
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="1"
          type="checkbox"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="3"
      >
        Router IP address
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="3"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the guest inner network.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="4"
      >
        Network mask
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="4"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Enable DHCP
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="5"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Enable QoS
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="6"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
</div>
`;
